--- a/lists/static/tests/tests.html
+++ b/lists/static/tests/tests.html
@@ -20,12 +20,12 @@
 
   <script>
   QUnit.test("errors should be hidden on keypress", function (assert) {
-    initialize();
+    window.Superlists.initialize();
     $('input[name="text"]').trigger('keypress');
     assert.equal($('.has-error').is(':visible'), false);
   });
   QUnit.test("errors should not be hidden on keypress", function (assert) {
-    initialize();
+    window.Superlists.initialize();
     assert.equal($('.has-error').is(':visible'), true)
   });
 
